--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,12 @@
+2004-06-28  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-server-push.ads:
+	(Unregister_Clients) Fix comment.
+	Change Client_Id case.
+
+	* aws-server-push.adb:
+	Change Client_Id case.
+
 2004-06-28  Pascal Obry  <pascal@obry.org>
 
 	* aws-net.adb:
