--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,3 +1,11 @@
+2004-07-07  Pascal Obry  <pascal@obry.org>
+
+	* soap-message-xml.adb:
+	(Array_State): Add A_Long.
+	(Parse_Long): New function.
+	(A_State): Add support for long type.
+	(Parse_Param): Idem.
+
 2004-06-27  Pascal Obry  <pascal@obry.org>
 
 	* soap-wsdl.ads:
