--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,11 @@
+2004-07-10  Pascal Obry  <pascal@obry.org>
+
+	* makefile:
+	(RT_SOAP): Add soap6.
+
+	* soap6.adb, soap6.out: 
+	Initial revision.
+
 2004-06-28  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* sp.adb, ssp.adb, sp_pck.ads, sp_pck.adb:
