--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-16  Pascal Obry  <pascal@obry.org>
+
+	* zlib.adb:
+	Fix style errors.
+	Minor reformatting.
+
 2004-06-25  Pascal Obry  <pascal@obry.org>
 
 	* strings_maps.ads:
