--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-23  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* zbig.adb:
+	Close zlib stream after use.
+
 2004-07-11  Pascal Obry  <pascal@obry.org>
 
 	* README.txt:
@@ -7,7 +12,7 @@
 	Fix test to match the one in the Ada part.
 	Update comments about the procedure to use this test.
 	Update copyright notice.
-	
+
 	* wsdl_6_main.adb, wsdl_6.out:
 	Output adjusted to the Java one.
 
@@ -15,8 +20,8 @@
 
 	* makefile:
 	(RT_SOAP): Add soap7.
-	
-	* soap7.adb, soap7.out: 
+
+	* soap7.adb, soap7.out:
 	Initial revision.
 
 2004-07-10  Pascal Obry  <pascal@obry.org>
@@ -24,7 +29,7 @@
 	* makefile:
 	(RT_SOAP): Add soap6.
 
-	* soap6.adb, soap6.out: 
+	* soap6.adb, soap6.out:
 	Initial revision.
 
 2004-06-28  Dmitriy Anisimkov <anisimkov@yahoo.com>
