--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,16 @@
+2004-07-25  Pascal Obry  <pascal@obry.org>
+
+	* makefile:
+	(SOURCES): Add aws-os_lib-definitions.ads.
+
+	* aws-net-sets-thin.ads:
+	Fix header format.
+	Fix comments.
+
+	* aws-net-sets.ads, aws-net-sets.adb:
+	(Count): Add parameter mode.
+	Fix header format.
+
 2004-07-24  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-server.ads:
