--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-08  Pascal Obry  <pascal@obry.org>
+
+	* zlib-thin.ads:
+	Minor reformatting.
+
 2003-07-23  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* zlib.ads, zlib.adb:
