--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-08  Pascal Obry  <pascal@obry.org>
+
+	* test_speed.adb:
+	(Check_Computer_Speed): Adjust speed factor.
+
 2004-07-23  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* zbig.adb:
