--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -77,7 +77,7 @@
         (Parse_Array.A_State): Removed.
         (Parse_Array): Use To_Type.
         (Parse_Param): Rewrite part of this implementation. It is now based
-         on Hanlders to easy maintenance, the code is lot smaller now.
+         on Hanlders to ease maintenance, the code is lot smaller now.
          Properly handle xsi:null.
 
 2004-07-10  Pascal Obry  <pascal@obry.org>
