--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,8 @@
 2004-08-08  Pascal Obry  <pascal@obry.org>
 
+	* aws-server.ads:
+	Minor reformatting.
+
 	* aws-server-push.ads:
 	Minor reformatting.
 
