--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-11  Pascal Obry  <pascal@obry.org>
+
+	* demos.gpr:
+	Add missing value in case statement to avoid warnings.
+
 2004-06-01  Pascal Obry  <pascal@obry.org>
 
 	* hotplug_module.ini:
