--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-11  Pascal Obry  <pascal@obry.org>
+
+	* src.gpr:
+	Add missing value in case statements to avoid warnings.
+
 2004-08-10  Pascal Obry  <pascal@obry.org>
 
 	* aws-net.ads:
