--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-11  Pascal Obry  <pascal@obry.org>
+
+	* tools.gpr:
+	Add missing value in case statements to avoid warnings.
+
 2004-07-09  Pascal Obry  <pascal@obry.org>
 
 	* ada2wsdl-options.ads:
