--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-12  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* hload_pack.adb:
+	(Client): Close client connection at the end.
+
 2004-08-11  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* hload.adb, hload_pack.ads, hload_pack.adb, hload_sec.adb, makefile,
