--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-15  Pascal Obry  <pascal@obry.org>
+
+	* aws-net.ads:
+	Minor reformatting.
+
 2004-08-13  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-client.adb:
