--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-24  Pascal Obry  <pascal@obry.org>
+
+	* aws-server.adb:
+	Minor reformatting.
+
 2004-08-24  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-server.adb:
