--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-25  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-server.adb:
+	(Sets.Release): Add comment.
+
 2004-08-24  Pascal Obry  <pascal@obry.org>
 
 	* aws-config-set.adb:
