--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-27  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-net-buffered.adb:
+	(Read): Set Last to First - 1. If timeout would be occured in the next
+	 call, buffer remain empty.
+
 2004-08-25  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-server.adb:
