--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,13 @@
+2004-08-27  Pascal Obry  <obry@act-europe.fr>
+
+	* aws-server.ads:
+	Rename Loose_Release to Release_Deferred.
+
+	* aws-server.adb:
+	(Release): Update comment.
+	Rename Loose_Release to Release_Deferred.
+	Minor reformatting.
+
 2004-08-27  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-net-buffered.adb:
