--- a/xsrc/ChangeLog
+++ b/xsrc/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-02  Pascal Obry  <pascal@obry.org>
+
+	* aws-jabber.adb, templates_parser-xml.adb:
+	Adjust to new AI302 version.	
+
 2004-07-07  Pascal Obry  <pascal@obry.org>
 
 	* templates_parser-xml.adb:
