--- a/docs/TODO
+++ b/docs/TODO
@@ -152,7 +152,7 @@ implemented:
 
 =============== Point to fix/implement/review before next release (2.1)
 
-- Add reply all support to the Web_Mail service.
+- Add reply-all support to the Web_Mail service.
 
 - Add support for SOAP hotplug modules
 
@@ -167,5 +167,15 @@ implemented:
   Possible syntax: @_PATH:"../file.css"_@
   Means take ../file.css as relatif to current file location.
 
-- Add a way to enable/disable file upload in the server. Today it is always
-  possible to upload a file to a server.
+- Make the upload server support more secure. It would be nice to be able to
+  control the file upload. Right now everybody can send a file to the server
+  and it will accept it. So ideas:
+
+  1. Add a specific upload callback to check the validity (to be analysed, is
+     it possible).
+
+  2. Remove all uploaded files after calling the user callback. The user is
+     responsible to move/rename/whatever the uploaded file is necessary
+     otherwise it is just removed.
+
+- Add an option in wsdl2aws to add debug output to the generated code.
