--- a/win32/ChangeLog
+++ b/win32/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-04  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* poll.adb:
+	Use AWS.Net.Thin instead of AWS.Net.Sets.Thin.
+
 2004-07-23  Pascal Obry  <pascal@obry.org>
 
 	* poll.ads:
